# cicd-security-auditor

./: -  .gitignore  LICENSE  README.md  audit_api.py  pyproject.toml  requirements.txt  run_audit.sh
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: api-reference.md  examples.md  getting-started.md
src/: __init__.py  audit_github.py  main.py
tests/: test_main.py  test_scanners.py
