[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-security-auditor"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
description = "Automated security scanning for CI/CD pipelines, secrets, and dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "detect-secrets>=1.4.0",
    "safety>=2.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cicd-security-auditor"
"Bug Tracker" = "https://github.com/yourusername/cicd-security-auditor/issues"

[project.scripts]
cicd-audit = "main:main"
cicd-audit-github = "audit_github:main"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]